Add functionality and styles

--- a/index.html
+++ b/index.html
@@ -1,13 +1,123 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Noah Croghan</title>
+    <link rel="icon" type="image/svg+xml" href="/person.svg" />
+    <link rel="stylesheet" href="/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <ul>
+      <li class="twitter">
+        <a href="https://twitter.com/noahcroghan">
+          <img src="/twitter.svg" alt="Twitter" />
+        </a>
+      </li>
+      <li class="instagram">
+        <a href="https://instagram.com/noahcroghan">
+          <img src="/instagram.svg" alt="Instagram" />
+        </a>
+      </li>
+      <li class="soundcloud">
+        <a href="https://soundcloud.com/noahcroghan">
+          <img src="/soundcloud.svg" alt="Soundcloud" />
+        </a>
+      </li>
+      <li class="github">
+        <a href="https://github.com/noahcroghan">
+          <img src="/github.svg" alt="GitHub" />
+        </a>
+      </li>
+    </ul>
+  </body>
+</html>
+
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Noah Croghan - Personal Page</title>
+    <style>
+      body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        color: #e0e0e0;
+        background-color: #121212;
+        line-height: 1.6;
+      }
+      header {
+        background: #1f1f1f;
+        padding: 1em;
+        text-align: center;
+      }
+      h1 {
+        margin: 0;
+        font-size: 2.5em;
+      }
+      section {
+        padding: 2em;
+        max-width: 800px;
+        margin: auto;
+      }
+      a {
+        color: #1e90ff;
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+      .links {
+        margin: 1em 0;
+      }
+      footer {
+        background: #1f1f1f;
+        color: #757575;
+        text-align: center;
+        padding: 1em;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <header>
+      <h1>Noah Croghan</h1>
+      <p>Software Engineering Student at University of Nebraska - Lincoln</p>
+    </header>
+
+    <section>
+      <h2>About Me</h2>
+      <p>
+        Hello! I'm Noah Croghan, currently studying Software Engineering at the
+        University of Nebraska - Lincoln. I am passionate about coding,
+        technology, and solving complex problems.
+      </p>
+
+      <h2>Links</h2>
+      <div class="links">
+        <a href="https://github.com/yourusername" target="_blank">GitHub</a> |
+        <a href="https://linkedin.com/in/yourusername" target="_blank"
+          >LinkedIn</a
+        >
+        |
+        <a href="mailto:your.email@example.com">Email Me</a>
+      </div>
+
+      <h2>Contact</h2>
+      <p>
+        Feel free to reach out to me through my
+        <a href="mailto:your.email@example.com">email</a> or connect with me on
+        <a href="https://linkedin.com/in/yourusername" target="_blank"
+          >LinkedIn</a
+        >.
+      </p>
+    </section>
+
+    <footer>
+      <p>&copy; 2024 Noah Croghan</p>
+    </footer>
   </body>
-</html>
+</html> -->
